# Billio

./: .env.example  Makefile  README.md  SETUP.md  build_output.txt  build_verification.txt  components.json  docker-compose.yml  index.html  nginx.conf  tsconfig.app.json  vite.config.ts
.github/workflows/: cd.yml  ci.yml
backend/: Cargo.toml
backend/ai-service/: Cargo.toml  Dockerfile
backend/auth-service/: Cargo.toml  Dockerfile
backend/client-service/: Cargo.toml  Dockerfile
backend/common/: Cargo.toml
backend/common/src/: lib.rs
backend/company-service/: Cargo.toml  Dockerfile
backend/company-service/src/: main.rs
backend/invoice-service/: Cargo.toml  Dockerfile
backend/product-service/: Cargo.toml  Dockerfile
backend/sql/: schema.sql
micro/: index.html  package-lock.json  package.json  plasma-test.html  test-plasma.tsx  tsconfig.app.json
micro/src/: app.tsx  index.css
server/: .env  index.js  migration.sql  package-lock.json  package.json  schema.sql
server/routes/: auth.js  company.js  estimates.js  payments.js  recurring.js  reports.js
server/services/: emailService.js  numberingService.js  pdfService.js
server/utils/: csvHelper.js
src/: app.tsx  index.css  main.tsx
src/app/: loading.tsx
src/components/: Layout.tsx  logo.tsx
src/lib/: api.ts
src/pages/: Clients.tsx  Dashboard.tsx  Estimates.tsx  ForgotPassword.tsx  HomePage.tsx  InvoiceEditor.tsx  InvoiceView.tsx  Invoices.tsx  Login.tsx  Products.tsx  RecurringInvoiceEditor.tsx  RecurringInvoices.tsx  Register.tsx  Reports.tsx  ResetPassword.tsx  Settings.tsx  (+1 more)
(+75 files in other folders)
