[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = "9.3"
axum = "0.7"
thiserror = "1.0"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-cookies = "0.10"
